e2e-messaging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: e2e-messaging-service
spec:
  selector:
    app: e2e-messaging
  ports:
    - port: 80
      targetPort: 80
