e2e-messaging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: e2e-messaging-route
  namespace: default

spec:
  parentRefs:
  - name: gateway-api
    sectionName: http
    kind: Gateway
  - name: gateway-api
    sectionName: https
    kind: Gateway

  hostnames:
  - e2e.isujith.dev

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: e2e-messaging-service
      port: 80
      weight: 1
